--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
     "@types/react-dom": "^18.0.6",
     "antd": "^5.17.4",
     "antd-mobile": "^5.36.1",
+    "dom-to-image": "^2.6.0",
     "html2canvas": "^1.4.1",
     "immutability-helper": "^3.1.1",
     "iscroll": "^5.2.0",
+    "lucide-react": "^0.397.0",
     "node-sass": "^7.0.3",
+    "rasterizehtml": "^1.3.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-redux": "^9.1.2",
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
@@ -56,6 +60,7 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
+    "@types/dom-to-image": "^2.6.7",
     "@types/react-beautiful-dnd": "^13.1.8",
     "code-inspector-plugin": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
